--- a/Laboratorul III/WebProject/Styles/home.css
+++ b/Laboratorul III/WebProject/Styles/home.css
@@ -1,10 +1,9 @@
 .mainbox {
-  max-width: 80%;
-  height: 1500px;
-
-  margin: auto;
+  max-width: 1050px;
+  margin: 0 auto;
   background-color: #E7EAED;
 }
+
 
 .background {
   background-image: url("Images/elf.jpg");
@@ -23,40 +22,41 @@
   z-index: 500;
 }
 
+
 .topbooks, .latest, .newBooks {
-  max-width: 100%;
-  height: 200px;
+  width: 100%;
+  height: 250px;
   align-items: center;
 
-  margin-top: 2%;
-  padding: 2% 0;
+  margin: 30px 0;
+  padding: 15px 0;
+}
+
+.slider {
+  display: flex;
+  justify-content: space-between;
 }
 
 .slider__item {
-  width: 15%;
+  max-width: 22%;
   margin: 0 0.5%;
 }
 
 .slide__image {
-  width: 100%;
+  max-width: 100%;
 }
 
-.listtitle {
+.slider__title {
   font-size: 120%;
-
 }
 
-/* Слайдер */
-.slick-slider{}
-/* Слайдер запущен */
-.slick-slider.slick-initialized{}
-/* Ограничивающая оболочка */
 .slick-list {
   overflow: hidden;
 }
-/* Лента слайдов */
+
 .slick-track {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -66,8 +66,7 @@
   flex-direction: column;
   justify-content: space-around;
 
-  height: 23%;
-  width: 90%;
+  height: 150px;
   margin:1% 5%;
 
   background-color: #F8FAFB;
@@ -88,6 +87,25 @@
 }
 
 .genrechoise:hover {
-  /* background-color: #c4aead; */
   background-color: #E7EAED;
+}
+
+
+@media (max-width:780px) {
+  .mainbox {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .topbooks, .latest, .newBooks {
+    height: 80px;
+    margin: 0 0 40px 0;
+  }
+  .slide__image {
+    margin: 0 0.5%;
+    max-height: 80px
+   }
+  .genresbtn {
+    margin: 15px 0;
+    height: 150px;
+  }
 }
