--- a/Laboratorul III/WebProject/Styles/template.css
+++ b/Laboratorul III/WebProject/Styles/template.css
@@ -31,6 +31,13 @@ header {
   z-index: 1000;
 }
 
+.menu {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 header a {
   text-align: center;
 
@@ -51,6 +58,93 @@ header input, header input:active {
   padding: 2% 5%;
 }
 
+.burger div {
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  display: none;
+}
+
+@media (max-width:1200px) {
+  .mainbox {
+    max-width: 970px;
+  }
+}
+@media (max-width:992px) {
+  .mainbox {
+    max-width: 750px;
+  }
+  .menu {
+    width: 80%;
+  }
+}
+@media (max-width:768px) {
+  .body {
+    overflow-x: hidden;
+  }
+  .mainbox{
+    max-width: none;
+  }
+  header {
+    justify-content: space-between;
+  }
+  .menu {
+    width: auto;
+    padding: 20px;
+    position: absolute;
+    right: 0px;
+    height: auto;
+    top: 8vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 50%;
+    background-color: white;
+
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  header a{
+    display: flex;
+    flex-direction: column;
+  }
+  .nav__links {
+    opacity: 0;
+  }
+  .burger div {
+    display: block;
+    margin-right: 50px;
+  }
+}
+
+.nav__active {
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+  from{
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
 
 /* Footer */
 footer {
@@ -84,4 +178,8 @@ footer {
 
 .dark__mainbox {
   background-color: #242525;
+}
+
+.dark__titlebox {
+  background-color: #01161e;
 }
