--- a/Laboratorul IV/webproject/styles/register.css
+++ b/Laboratorul IV/webproject/styles/register.css
@@ -4,7 +4,7 @@
   align-items: center;
 
   max-width: 300px;
-  height: 350px;
+  height: 500px;
   margin: 120px auto;
   padding: 1% 2%;
 
@@ -50,7 +50,7 @@
   align-items: center;
   justify-content: center;
 
-  height: 10%;
+  height: 10s%;
   width: 100%;
 
   border: solid 2px;
